tests/negative/test_call_func_type_not_found.orb
fnc foo (i32) () {};
fnc foo (f32) () {};

fnc main () () {
    foo:(fnc (u32) ()) 100;
};